styles/styles.sass
$fullStack: #C5946C
$colorOne: #434F1D


body
  position: relative
  display: block
  width: 100%
  font-family: 'Open Sans', sans-serif
.my-pic
  position: relative
  max-width: 150px
  max-height: 150px
  border-radius: 75px
  border: 10px solid white
  @media screen and (min-width: 768px)
    max-width: 200px
    max-height: 200px
    border-radius: 100px
      border: 10px solid white
  @media screen and (min-width: 992px)
    max-width: 260px
    max-height: 260px
    border-radius: 130px
    border: 10px solid white
    bottom: 5px

.full-stack-color
  color: white

.fa-icon-down
  position: absolute
  bottom: 45px
  color: #fff
  width: 100%
  &:hover
    cursor: pointer

.navbar
  padding: 30px 15px
  transition: all 0.5s

.cbp-af-header-shrink
  padding-top: 0px
  padding-bottom: 0px
  opacity: 0.9

.typed-info
  text-align: center
  padding-top: 0px
  padding-left: 0px
  @media screen and (min-width: 768px)
    text-align: justify
    padding-top: 65px
  @media screen and (min-width: 992px)
    text-align: justify
    padding-top: 100px


.top-background-img
  position: relative
  background-size: cover
  background-attachment: fixed
  background-repeat: no-repeat
  background-position: center

.bike-background-img
  background-size: cover
  background-attachment: fixed
  // background-repeat: no-repeat
  background-position: center
.filler
  position: relative
  font-size: 25px
  font-weight: 400
  color: darken(white, 10%)
  background-color:
  top: 35%

.social-icons
  display: inline-flex
  height: 100%
  flex-direction: column
  padding-top: 2px
  position: absolute
  @media screen and (min-width: 768px)
    padding-top: 25px
  @media screen and (min-width: 992px)
    padding-top: 25px
    width: 50px



.social-icon-one
  position: relative
  padding-right: 30px
  right: 45px
  div
    background-color: cornflowerblue
    height: 40px
    width: 40px
    border-radius: 20px
    a
      padding-top: 8px
      color: white
      text-decoration: none
  @media screen and (min-width: 992px)
    position: relative
    padding-right: 30px
    padding-top: 15px
    right: 45px
    div
      background-color: cornflowerblue
      height: 40px
      width: 40px
      border-radius: 20px
      a
        padding-top: 8px
        color: white
        text-decoration: none

.social-icon-two
  position: relative
  right: 25px
  padding-top: 10px
  div
    background-color: cornflowerblue
    height: 40px
    width: 40px
    border-radius: 20px
    a
      padding-top: 8px
      color: white
      text-decoration: none

  @media screen and (min-width: 768px)
    padding-top: 15px
  @media screen and (min-width: 992px)
    position: relative
    padding-top: 30px
    right: 25px
    div
      background-color: cornflowerblue
      height: 40px
      width: 40px
      border-radius: 20px
      a
        padding-top: 8px
        color: white
        text-decoration: none

.social-icon-three
  position: relative
  padding-right: 30px
  padding-top: 10px
  right: 45px
  div
    background-color: cornflowerblue
    height: 40px
    width: 40px
    border-radius: 20px
    a
      padding-top: 8px
      color: white
      text-decoration: none
  @media screen and (min-width: 768px)
    padding-top: 15px
  @media screen and (min-width: 992px)
    position: relative
    padding-right: 30px
    padding-top: 30px
    right: 45px
    div
      background-color: cornflowerblue
      height: 40px
      width: 40px
      border-radius: 20px
      a
        padding-top: 8px
        color: white
        text-decoration: none

.skills-section
  padding-top: 20px
  padding-bottom: 40px
.skills-section-icons
  max-width: 50px
  padding-top: 15px

.express-fix
  padding-top: 40px
  padding-bottom: 15px

.massive-fix
  padding-top: 30px
  padding-bottom: 13px
.sass-fix
  padding-top: 20px
  padding-bottom: 7px
.about-me
  padding-bottom: 30px
  div
    font-size: 20px
    font-weight: 400

